--- a/package.json
+++ b/package.json
@@ -1,37 +1,40 @@
 {
-  "name": "grunt-it",
-  "description": "A grunt task for executing tests written with the it test framework",
-  "version": "0.1.0",
-  "homepage": "https://github.com/nicknisi/grunt-it",
-  "author": {
-    "name": "Nick Nisi",
-    "email": "nick@nisi.org"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/nicknisi/grunt-it.git"
-  },
-  "bugs": {
-    "url": "https://github.com/nicknisi/grunt-it/issues"
-  },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/nicknisi/grunt-it/blob/master/LICENSE-MIT"
+    "name": "grunt-it",
+    "description": "A grunt task for executing tests written with the it test framework",
+    "version": "0.1.0",
+    "homepage": "https://github.com/nicknisi/grunt-it",
+    "author": {
+        "name": "Nick Nisi",
+        "email": "nick@nisi.org"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/nicknisi/grunt-it.git"
+    },
+    "bugs": {
+        "url": "https://github.com/nicknisi/grunt-it/issues"
+    },
+    "licenses": [
+        {
+        "type": "MIT",
+        "url": "https://github.com/nicknisi/grunt-it/blob/master/LICENSE-MIT"
     }
-  ],
-  "main": "grunt.js",
-  "bin": "bin/grunt-it",
-  "engines": {
-    "node": "*"
-  },
-  "scripts": {
-    "test": "grunt test"
-  },
-  "devDependencies": {
-    "grunt": "~0.3.17"
-  },
-  "keywords": [
-    "gruntplugin"
-  ]
+    ],
+    "main": "grunt.js",
+    "bin": "bin/grunt-it",
+    "engines": {
+        "node": "*"
+    },
+    "scripts": {
+        "test": "grunt test"
+    },
+    "devDependencies": {
+        "grunt": "~0.3.17",
+        "it": "0.0.5"
+    },
+    "keywords": [
+        "gruntplugin"
+    ],
+    "dependencies": {
+    }
 }
